FHIR-50579 Implementation Obligations should mention Vital Signs profile

--- a/source/obligations.html
+++ b/source/obligations.html
@@ -64,9 +64,9 @@ of these things are more likely to be true for IsModifier elements than for othe
 </p>  
 
 <p>
-The base FHIR specification is intended to be independent of any particular implementation context, 
-so no elements are flagged as <code>mustSupport</code>=true as part of the base specification, and 
-no obligations are defined for any elements (except for an example profile).
+The base FHIR specification is intended to be independent of any particular implementation context, so
+no elements are flagged as <code>mustSupport</code>=true or assigned obligations as part of the resource definitions
+in base specification (though obligations and/or mustSupport are used in some profiles defined in the base specification).
 </p>
 
 <p>
