[FHIR-53086](https://jira.hl7.org/browse/FHIR-53086): Updated supporting documentation page

--- a/source/clinicalreasoning-topics-supporting-documentation.html
+++ b/source/clinicalreasoning-topics-supporting-documentation.html
@@ -19,7 +19,7 @@
 
 <p>The <code>relatedArtifact</code> element present on the Clinical Reasoning Module artifacts allows supporting documentation to be provided, either in the form of a reference to a resource, such as a DocumentReference, or as a reference to external content as an Attachment.</p>
 
-<p>This same mechanism can be used to attach supporting documentation to the <code>actionDefinition</code> elements of a PlanDefinition, allowing supporting documentation for specific steps in a rule or protocol, as well as to the <code>action</code> elements of a RequestOrchestration to provide supporting documentation for individual recommendations as part of the result of a decision support evaluation.</p>
+<p>This same mechanism can be used to attach supporting documentation to the <code>action</code> elements of a PlanDefinition, allowing supporting documentation for specific steps in a rule or protocol, as well as to the <code>action</code> elements of a RequestOrchestration to provide supporting documentation for individual recommendations as part of the result of a decision support evaluation.</p>
 
 <pre><code>&lt;documentation&gt;
   &lt;type value=&quot;justification&quot;/&gt;
@@ -39,9 +39,13 @@
   &lt;/document&gt;
 &lt;/documentation&gt;</code></pre>
 
-<p>In all these cases, the qualityOfEvidence and strengthOfRecommendation extensions can be used to grade the information being provided. For example, the qualityOfEvidence extension can be attached to a DocumentReference to indicate a rating for the quality of the evidence represented in the document. Similarly, a strengthOfRecommendation extension can be attached to the action element of a RequestOrchestration to indicate the strength of the recommendation being made.</p>
+<p>In all these cases, the <a href="[%extensions-location%]StructureDefinition-cqf-qualityOfEvidence.html">cqf-qualityOfEvidence</a> and <a href="[%extensions-location%]StructureDefinition-cqf-strengthOfRecommendation.html">cqf-strengthOfRecommendation</a> extensions can be used to grade the information being provided. For example, the qualityOfEvidence extension can be attached to a DocumentReference to indicate a rating for the quality of the evidence represented in the document. Similarly, a strengthOfRecommendation extension can be attached to the action element of a RequestOrchestration to indicate the strength of the recommendation being made.</p>
 
 <p>These extensions are bound to example valuesets based on the <a href="http://www.gradeworkinggroup.org/">GRADE</a> rating systems for quality of evidence and strength of recommendation. Other rating systems could be used by defining the appropriate valuesets and profiles to make use of them.</p>
+
+<p>For more information on how these extensions can be used to provide rationale and supporting documentation for guideline recommendations, see the <a href="http://hl7.org/fhir/uv/cpg">Clinical Practice Guideline</a> implementation guide.</p>
+
+<p>For more information on how to link evidence to provide supporting documentation, refer to the <a href="http://hl7.org/fhir/uv/ebm">Evidence-based Medicine on FHIR</a> implementation guide.</p>
 [%file newfooter%]
 </body>
 </html>
