FHIR-50904 Remove browser details from the main page

--- a/source/index.html
+++ b/source/index.html
@@ -60,29 +60,29 @@ undergone ANSI approval processes.</b>
   <ul>
     <li><a href="http://www.fhir.org/guides/registry">Curated list of Implementation Guides</a></li>
     <li><a href="https://registry.fhir.org/">All publicly available FHIR specification artifacts</a></li>
+    <li><a href="https://packages2.fhir.org/xig">Index of all Implementation Guides</a></li>
  </ul>
  </td><td>
-  <p><b><a href="http://fhir.org">FHIR Foundation</a></b></p>
+  <p><b><a href="http://fhir.org">FHIR Community</a></b></p>
   <p>Enabling health interoperability through FHIR</p>
   <ul>
-    <li> <a href="http://chat.fhir.org/">FHIR Chat</a> + <a href="http://community.fhir.org/">Community Forum</a></li>
-    <li><a href="https://confluence.hl7.org/display/FHIR/Public+Test+Servers">Public Test Servers &amp; Software </a></li>
-    <li><a href="https://confluence.hl7.org/display/FHIR/Blogs">Blogs that cover FHIR </a></li>
+    <li> <a href="http://chat.fhir.org/">FHIR Community Discussions</a></li>
     <li><a href="https://confluence.hl7.org/display/FHIR">FHIR Confluence (working &amp; internal documentation) </a></li>
+    <li><a href="https://www.hl7.org/events/index.cfm?showallevents&ref=nav">HL7 Face to Face Events </a></li>
+    <li><a href="https://www.hl7.org/concalls/">Weekly Virtual meetings</a></li>
   </ul>
+ </td>
  </td><td>
-  <p><b>Translations</b></p>
-  <p>Note that translations are not always up to date</p>
+  <p><b><a href="http://fhir.org">Implementation Links</a></b></p>
+  <p>Useful support for FHIR Implementers</p>
   <ul>
-    <li><a href="http://fhir-ru.github.io/index.html">Russian </a></li>
-    <li><a href="https://github.com/wanghaisheng/fhir-cn/blob/source/README.md">Chinese</a></li>
-    <li><a href="https://std.jpfhir.jp/">Japanese </a></li>
+    <li><a href="https://confluence.hl7.org/display/FHIR/Public+Test+Servers">Registry of Software Implementations</a></li>
+    <li><a href="https://confluence.hl7.org/display/FHIR/Public+Test+Servers">Public Test Servers</a></li>
+    <li><a href="https://confluence.hl7.org/display/FHIR/Public+Test+Servers">Useful Tools for Implementers</a></li>
   </ul>
-</td></tr></table>
+ </td>
+</tr></table>
 
- <p id="srch"> </p>
-
-<p>Note: This specification requires a browser that is SVG compatible (Microsoft Internet Explorer 10+/Edge, Firefox 3.0+, Chrome, or Safari), and uses the browser's session storage to remember which tabs are active.</p>
 </div>
 
 [%file newfooter%]
