FHIR-50981 Clarify delimiters for Address.text

--- a/source/datatypes.html
+++ b/source/datatypes.html
@@ -1537,9 +1537,10 @@ of postal address formats defined around the world.
 [%dt Address 11%]
 
 <p>
-The text element specifies the entire address as it should be displayed e.g. on a postal label. This may
-be provided instead of or as well as the specific parts. Applications updating an address SHALL ensure that
-when both text and parts are present, no content is included in the text that isn't found in a part.
+The text element Specifies the entire address as it should be displayed e.g. on a postal label, 
+using a newline delimiter for each line (e.g., \n). This may be provided instead of or as well 
+as the specific parts. Applications updating an address SHALL ensure that when both text and 
+parts are present, no content is included in the text that isn't found in a part.
 </p>
 
 
