FHIR-51073 eld-31 is throwing unrelated errors

--- a/source/index.html
+++ b/source/index.html
@@ -68,7 +68,7 @@ undergone ANSI approval processes.</b>
   <ul>
     <li> <a href="http://chat.fhir.org/">FHIR Community Discussions</a></li>
     <li><a href="https://confluence.hl7.org/display/FHIR">FHIR Confluence (working &amp; internal documentation) </a></li>
-    <li><a href="https://www.hl7.org/events/index.cfm?showallevents&ref=nav">HL7 Face to Face Events </a></li>
+    <li><a href="https://www.hl7.org/events/index.cfm?showallevents&amp;ref=nav">HL7 Face to Face Events </a></li>
     <li><a href="https://www.hl7.org/concalls/">Weekly Virtual meetings</a></li>
   </ul>
  </td>
