FHIR-50847 Clarify underscore wording: remove 'reserved names' phrase

--- a/source/http.html
+++ b/source/http.html
@@ -115,7 +115,7 @@ Implementations constructing URLs using these patterns SHOULD conform to <a href
 which requires percent-encoding for a number of characters that occasionally appear in the URLs (mainly in search parameters).
 </p>
 <p>
-This specification uses the underscore as a prefix to disambiguate reserved names from other names in 3 cases:
+This specification uses the underscore as a prefix to disambiguate names in 3 cases:
 </p>
 <ul>
  <li>To differentiate system wide history and search interactions from interactions on Resource Types</li>
