--- a/source/search.html
+++ b/source/search.html
@@ -1221,11 +1221,12 @@ location:above=A101</span>
   <p>
     When the <code>above</code> modifier is used with a <a href="#reference">reference</a> type search parameter and the target is an element with
     the FHIR type <a href="datatypes.html#canonical">canonical</a>, the search is interpreted 
-    as a version search against the canonical resource.  The format of the parameter is either <b><code>[url]</code></b> or 
-    <b><code>[url]|[version]</code></b> (see <a href="#encoding-note">Encoding Note</a>).  This search is only allowed if the version scheme for the
-    resource is known (e.g., a known version-scheme extension or element).  <span class="fhir-conformance">Version-related search criteria against 
-    resources with unknown versioning schemes SHALL be either ignored or rejected.</span> The <code>above</code>
-    modifier comparison is performed as a 'greater than' against the version-scheme defined by the resource.
+  as a version search against the canonical resource.  The format of the parameter is either <b><code>[url]</code></b> or 
+  <b><code>[url]|[version]</code></b> (see <a href="#encoding-note">Encoding Note</a>).  This search is only allowed if the version scheme for the
+  resource is either specified or the server chooses to infer it. <span class="fhir-conformance">Version-related search criteria against 
+  resources with unknown versioning schemes SHALL be either ignored or rejected.</span> The <code>above</code>
+  modifier comparison is performed as a 'greater than' against the version-scheme defined by the resource. Any versions that match the 
+  specified search are <b>excluded</b> from the result. The versions returned will be listed in no particular order.
   </p>
   <p>
     When using the <code>above</code> modifier on a canonical reference, all typically-valid search parameter token inputs are allowed. Note that any
@@ -1353,11 +1354,12 @@ location:below=BuildingA</span>
   <p>
     When the <code>below</code> modifier is used with a <a href="#reference">reference</a> type search parameter and the target is an element
     with the FHIR type <a href="datatypes.html#canonical">canonical</a>, the search is interpreted 
-    as a version search against the canonical resource.  The format of the parameter is either <b><code>[url]</code></b> or 
-    <b><code>[url]|[version]</code></b> (see <a href="#encoding-note">Encoding Note</a>). This search is only allowed if the version scheme for the
-    resource is known (e.g., a known version-scheme extension or element). <span class="fhir-conformance">Version-related search criteria against 
-    resources with unknown versioning schemes SHALL be either ignored or rejected.</span> The <code>below</code>
-    modifier comparison is performed as a 'less than' against the version-scheme defined by the resource.
+  as a version search against the canonical resource.  The format of the parameter is either <b><code>[url]</code></b> or 
+  <b><code>[url]|[version]</code></b> (see <a href="#encoding-note">Encoding Note</a>). This search is only allowed if the version scheme for the
+  resource is either specified or the server chooses to infer it. <span class="fhir-conformance">Version-related search criteria against 
+  resources with unknown versioning schemes SHALL be either ignored or rejected.</span> The <code>below</code>
+  modifier comparison is performed as a 'less than' against the version-scheme defined by the resource. Any versions that match the specified search 
+  are <b>excluded</b> from the result. The versions returned will be listed in no particular order.
   </p>
   <p>
     When using the <code>below</code> modifier on a canonical reference, all typically-valid search parameter token inputs are allowed.  Note that any
